--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "EthereumExplorer",
+  "name": "Earthdollar Explorer",
   "private": false,
   "version": "0.1.0",
-  "description": "A lightweight ethereum block explorer",
-  "repository": "https://github.com/etherparty/explorer",
+  "description": "A lightweight earthdollar block explorer",
+  "repository": "https://github.com/EarthDollar/explorer",
   "license": "MIT",
   "devDependencies": {
     "bower": "^1.3.1",
