--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "EthereumExplorer",
+  "name": "EarthdollarExplorer",
   "private": false,
   "version": "0.1.0",
-  "description": "A lightweight ethereum block explorer",
+  "description": "A lightweight earthdollar block explorer",
   "repository": "https://github.com/etherparty/explorer",
   "license": "MIT",
   "devDependencies": {
